--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
   line-height: 24px;
   font-weight: 400;
 
-  background-color: #fafbfe;
+  background-color: #EDF2F8;
   color: #1a1b1e;
 
   font-synthesis: none;
