--- a/src/app.css
+++ b/src/app.css
@@ -53,6 +53,16 @@ h1, h2, h3, p {
   margin: 0;
 }
 
+code {
+  font-family: Menlo, Monaco, Consolas, "Andale Mono", "Ubuntu Mono", "Courier New", monospace;
+  font-size: 15px;
+  color: #EDF2F8;
+  background: #0066b2;
+  text-shadow: none;
+  padding: 2px;
+  border-radius: 4px;
+}
+
 /* Global convenience classes */
 .stretch {
   width: 100%;
@@ -68,7 +78,6 @@ h1, h2, h3, p {
 
 .subtext {
   color: #696969;
-  font-size: 14px;
   /* Reduce line height for consistent spacing. */
-  line-height: 14px;
+  line-height: 16px;
 }
