Copy over some more things

--- a/src/app.css
+++ b/src/app.css
@@ -63,8 +63,7 @@ ul {
 }
 
 code {
-  font-family: Menlo, Monaco, Consolas, "Andale Mono", "Ubuntu Mono",
-    "Courier New", monospace;
+  font-family: Menlo, Monaco, Consolas, "Andale Mono", "Ubuntu Mono", "Courier New", monospace;
   font-size: 15px;
   color: #edf2f8;
   background: #0066b2;
